--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@ along with semanticcms-news-servlet.  If not, see <http://www.gnu.org/licenses /
 / <a target="${javadoc.target}" href="https://semanticcms.com/news/">News</a>
 / <a target="${javadoc.target}" href="${project.url}">Servlet</a>]]></javadoc.breadcrumbs>
 		<description.html><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/news/">SemanticCMS newsfeeds</a> in a Servlet environment.]]></description.html>
+		<!-- SonarCloud.io -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<name>SemanticCMS News Servlet²</name>
